Fix z-index bug

--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ body {
 	top: 0px;
 	width: 993px;
 	height: 573px;
-	z-index: 109;
+	z-index: 99;
 }
 #inner-box {
     overflow: hidden;
